Fix footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,7 +33,7 @@ a {
   color: white;
 }
 
-footer a {
+footer p a {
   text-align: left;
 }
 
